# RAOT_Api

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  log_config.yaml  main.py  pyproject.toml  requirements.txt
app/: backend_pre_start.py  config.py  initial_data.py  main.py  middleware.py  test_rbca.py
app/I18n/: load_laguage.py  th.json
app/api/: deps.py  main.py
app/core/: auth.py  casbin.py  config.py  db_config.py  middleware.py
app/db/: adapter.py  main.py
app/examples/: rbac_policy.csv
app/helpers/: password_service.py
app/migrations/: env.py
app/models/: __init__.py  base.py  casbin_rule.py  district.py  geography.py  module.py  permission.py  province.py  resource.py  role.py  role_permission.py  rubber_farm.py  rubber_type.py  rubberfarm.py  soil_geography.py  soilgeography.py  soiltype.py  subdistrict.py  user_account.py  user_profile.py  user_role.py  weathergeography.py
app/schemas/: __init__.py  base.py  geo_schema.py  predict_schema.py  private_schema.py  province_schema.py  query_schema.py  result.py  role_schema.py  token_schema.py  user_schema.py
app/services/: data_service.py  district_service.py  file_service.py  geography_service.py  predict_service.py  private_service.py  province_service.py  role_service.py  sub_district_service.py  token_service.py  user_service.py
app/utilities/: app_config.py  app_exceptions.py  app_logging.py  app_utilities.py  password_service.py  trace_config.py
src/: __init__.py  config.py  initial_data.py  main.py
(+117 files in other folders)
