[project]
name = "seed-api-canary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "casbin>=1.38.0",
    "casbin-async-sqlalchemy-adapter>=1.7.0",
    "fastapi[standard]>=0.115.8",
    "orjson>=3.10.15",
    "pandas>=2.2.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "pylint>=3.3.4",
    "requests>=2.32.3",
    "robotframework>=7.2.2",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.38",
    "tenacity>=9.0.0",
]
